[gd_scene load_steps=8 format=3 uid="uid://wu5ueni3h82"]

[ext_resource type="Script" path="res://scripts/ships/player.gd" id="1_dwkfs"]
[ext_resource type="Texture2D" uid="uid://ho8ftpculy4x" path="res://assets/Sprites/Ship/tiny_ship1.png" id="2_lp7md"]
[ext_resource type="PackedScene" uid="uid://cwe5l3ooqsi2i" path="res://scenes/guns/gun.tscn" id="2_rgknw"]
[ext_resource type="Texture2D" uid="uid://qwa30smqdmkq" path="res://assets/Sprites/Ship/tiny_ship14.png" id="4_ablq0"]

[sub_resource type="HealthComponent" id="HealthComponent_i1mky"]

[sub_resource type="Specifications" id="Specifications_k74rt"]
left_lightgun_pos = Vector2(-9.99996, 12)
right_lightgun_pos = Vector2(10, 12)
hardgun_pos = Vector2(2.89599e-05, 8)
speed = 1000.0
max_speed = 1000.0

[sub_resource type="Gradient" id="Gradient_hqcrx"]
colors = PackedColorArray(0.666667, 0.776471, 0.286275, 1, 1, 0.0784314, 0.027451, 0)

[node name="player" type="ShipBase"]
health_component = SubResource("HealthComponent_i1mky")
specifications = SubResource("Specifications_k74rt")
left_lightgun = NodePath("gunpos_left")
right_lightgun = NodePath("gunpos_right")
hardgun = NodePath("gunpos_hard")
rotation = 1.5708
collision_layer = 262
collision_mask = 256
motion_mode = 1
script = ExtResource("1_dwkfs")
gunResource = ExtResource("2_rgknw")
bullet_target = 1

[node name="colshape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(4, -22, 24, 14, 24, 22, 12, 20, -12, 20, -24, 22, -24, 14, -4, -22)

[node name="particles_engine" type="CPUParticles2D" parent="."]
position = Vector2(0, 14)
rotation = 1.5708
amount = 75
randomness = 1.0
fixed_fps = 60
draw_order = 1
emission_shape = 4
emission_points = PackedVector2Array(-2, 18, -2, -18)
emission_colors = PackedColorArray()
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_hqcrx")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_lp7md")

[node name="gunpos_left" type="Marker2D" parent="."]
position = Vector2(-10, 12)
rotation = -3.14159
scale = Vector2(1, -1)
gizmo_extents = 20.0

[node name="gunpos_right" type="Marker2D" parent="."]
position = Vector2(10, 12)
gizmo_extents = 20.0

[node name="gunpos_hard" type="Marker2D" parent="."]
position = Vector2(0, 8)
gizmo_extents = 20.0

[node name="dash_cooldown" type="Timer" parent="."]
one_shot = true

[node name="sprite2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_ablq0")

[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown"]
